--- a/WebApplication2/Views/Files/Create.cshtml
+++ b/WebApplication2/Views/Files/Create.cshtml
@@ -10,28 +10,22 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="path" class="control-label"></label>
-                <input asp-for="path" class="form-control" />
-                <span asp-validation-for="path" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateCreated" class="control-label"></label>
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateModified" class="control-label"></label>
-                <input asp-for="DateModified" class="form-control" />
-                <span asp-validation-for="DateModified" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        
+            
+
+            <form method="post" enctype="multipart/form-data" asp-action="Create">
+                <input type="file" name="file" />
+                <input type="submit" value="Upload" />
+            </form>
+
+ 
+            
+
+        
+
+        
     </div>
+   
 </div>
 
 <div>
